bk_ida/gobmkida/g2/gg_srand
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/gg_srand/src/utils/random.c:590:33: error: use of undeclared identifier 'unk_B9EF84'
while ( v1 != ( unsigned int *)&unk_B9EF84 ); 
                                ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/gg_srand/src/obj/5/random.o] Error 1
